2013-05-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/liouv.spad.pamphlet,
	src/algebra/special2.spad.pamphlet,
	src/algebra/fs2ups.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet,
	src/algebra/expr.spad.pamphlet: Implement erfi.


2013-05-01  Krystian Baclawski <krystian.baclawski@gmail.com>

	* contrib/macos: Build application bundle for MacOSX.
	* Makefile.in: Make FriCAS installation relocatable with 
	  FRICAS_PREFIX environment variable.

2013-04-29  Krystian Baclawski <krystian.baclawski@gmail.com>

	* src/lib/edin.c, src/lib/fnct_key.c, src/lib/util.c,
	src/lib/wct.c: Remove rusty workaround for ancient MacOSX'es.

2013-04-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intden.spad.pamphlet: Fix integration with
	'li'.

2013-04-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rdeef.spad.pamphlet: Fix wrong normalization
	in RDE.

2013-04-07  Raoul Bourquin  <somebody@bluewin.ch>
	    Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Add package for matrix manipulation.
	* src/algebra/mama.spad.pamphlet: New file.
	src/algebra/Makefile.in: Adjust.

2013-04-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac, src/lisp/Makefile.in: Work around broken
	Gentoo sbcl.
	configure: regenerate.

2013-04-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lib/cfuns-c.c, src/interp/util.lisp: Fix build with
	clisp.

2013-04-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fortran.spad.pamphlet,
	src/algebra/ffcat.spad.pamphlet: Minor cleanup.

2013-04-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/newfort.boot: Fix another fortran output problem.

2013-04-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot, src/lisp/fricas-lisp.lisp,
	src/lisp/fricas-package.lisp: Fix ')undo'.

2013-04-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/newfort.boot: Fix output of exponents.
